fix: profile photo alignment with profile wordings. fix #70

--- a/sass/pages/content.sass
+++ b/sass/pages/content.sass
@@ -46,7 +46,7 @@
 .next-profile
   float: left
   margin-right: 10px
-  width: 130px
+  width: 140px
 
 .page-content
   margin: 2rem 0
